<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/noteFragment"
    android:layout_width="match_parent"
    android:layout_height="75dp">

    <ImageView
        android:id="@+id/noteImageInFragment"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:contentDescription="@string/note_image"
        android:src="@drawable/default_note_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleInFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/title"
        app:layout_constraintStart_toEndOf="@+id/noteImageInFragment"
        app:layout_constraintTop_toTopOf="@+id/noteImageInFragment" />

    <CheckBox
        android:id="@+id/checkBoxInFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/noteImageInFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/noteImageInFragment" />

    <TextView
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/progress"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxInFragment"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxInFragment"
        app:layout_constraintTop_toTopOf="@+id/checkBoxInFragment" />

    <TextView
        android:id="@+id/dateInFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="@+id/titleInFragment"
        app:layout_constraintTop_toBottomOf="@+id/titleInFragment" />
</androidx.constraintlayout.widget.ConstraintLayout>